change color to red

--- a/kitspace.yaml
+++ b/kitspace.yaml
@@ -2,7 +2,7 @@ summary: Hardware for quick and easy prototyping with your silicon photomultipli
 
 site: https://nuclearphoenix.xyz # A site you would like to link to (include http:// or https://)
 
-color: green # for example
+color: red # for example
    # The solder resist color of the preview rendering. If left undefined "green" is used. Can be one of:
        # - green
        # - red
